# rust-speed-benchmark

./: .gitignore  Cargo.toml  README.md
benchmarks/java/: Benchmark.java
benchmarks/javascript/: benchmark.js
benchmarks/python/: benchmark.py
frontend/: index.html
src/: main.rs
