[package]
name = "rust-speed-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
rayon = "1.7"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "server"
path = "src/main.rs"